--- a/src/elements/footer/footer.css
+++ b/src/elements/footer/footer.css
@@ -1,7 +1,7 @@
 
 
 .footer-bg {
-    background-color: var(--quaternary-project);
+    background-color: #89A3CF;
     width: 100%;
     margin-top: auto; /* This pushes the footer to the bottom */
 }
